--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,8 @@ jobs:
       - name: Checkout source
         id: source
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Configure git
         id: git
