--- a/charts/hcloud-exporter/Chart.yaml
+++ b/charts/hcloud-exporter/Chart.yaml
@@ -7,9 +7,9 @@ type: application
 
 # renovate: datasource=docker depName=quay.io/promhippie/hcloud-exporter
 appVersion: 1.1.0
-version: 1.0.1
+version: 1.0.2
 
-home: https://github.com/promhippie/hcloud_exporter
+home: https://promhippie.github.io/hcloud_exporter/
 icon: https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/hetzner.svg
 
 keywords:
