--- a/.github/workflows/helmdocs.yaml
+++ b/.github/workflows/helmdocs.yaml
@@ -14,6 +14,8 @@ jobs:
       - name: Checkout source
         id: source
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.BOT_ACCESS_TOKEN }}
 
       - name: Update readme
         uses: docker://jnorwood/helm-docs:v1.11.0
