--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,5 @@
 # http://editorconfig.org
+
 root = true
 
 [*]
@@ -6,6 +7,13 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.yml]
-indent_style = space
-indent_size = 2
+[Makefile]
+indent_style = tab
+indent_size = 4
+
+[*.go]
+indent_style = tab
+indent_size = 4
+
+[*.md]
+trim_trailing_whitespace = true
