fix(scw-exporter): fix new line for annotations

--- a/charts/scw-exporter/templates/deployment.yaml
+++ b/charts/scw-exporter/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "scw-exporter.labels" . | nindent 4 }}
   annotations:
-{{- if not .Values.config.existingSecret -}}
+{{- if not .Values.config.existingSecret }}
     checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
 {{- end }}
 {{- if  .Values.annotations }}
