--- a/charts/github-exporter/templates/deployment.yaml
+++ b/charts/github-exporter/templates/deployment.yaml
@@ -1,6 +1,3 @@
-{{- if and .Values.config.token .Values.config.tokenSecret -}}
-{{ fail (printf "ERROR: only one of .Values.config.token or .Values.config.tokenSecret must be defined") }}
-{{- end -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -8,7 +5,12 @@ metadata:
   labels:
     {{- include "github-exporter.labels" . | nindent 4 }}
   annotations:
-    {{- toYaml .Values.annotations | nindent 4 }}
+{{- if not .Values.config.existingSecret }}
+    checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+{{- end }}
+{{- if  .Values.annotations }}
+{{ toYaml .Values.annotations | indent 4 }}
+{{- end }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -18,8 +20,10 @@ spec:
     metadata:
       labels:
         {{- include "github-exporter.labels" . | nindent 8 }}
+{{- if  .Values.annotations }}
       annotations:
         {{- toYaml .Values.annotations | nindent 8 }}
+{{- end }}
     spec:
       serviceAccountName: {{ include "github-exporter.serviceAccountName" . }}
       {{- if .Values.image.pullSecrets }}
@@ -35,6 +39,11 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           env:
+            - name: GITHUB_EXPORTER_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.config.existingSecret | default (include "github-exporter.fullname" .) }}
+                  key: {{ .Values.config.tokenKey }}
             {{- range $key, $value := .Values.extraEnvSecrets }}
             - name: {{ $key }}
               valueFrom:
@@ -46,16 +55,8 @@ spec:
             - name: {{ $key }}
               value: "{{ $value }}"
             {{- end }}
-            {{- if .Values.config.tokenSecret }}
-            - secretRef:
-                name: {{ .Values.config.tokenSecret }}
-                key: {{ .Values.config.secretKey }}
-            {{- end }}
+          {{- if or .Values.envFromSecret .Values.envFromConfigMap }}
           envFrom:
-          {{- if  .Values.config.token }}
-            - secretRef:
-                name: {{ template "github-exporter.fullname" . }}
-          {{- end }}
           {{- if .Values.envFromSecret }}
             - secretRef:
                 name: {{ .Values.envFromSecret }}
@@ -63,6 +64,7 @@ spec:
           {{- if .Values.envFromConfigMap }}
             - configMapRef:
                 name: {{ .Values.envFromConfigMap }}
+          {{- end }}
           {{- end }}
           ports:
             - name: http
@@ -76,8 +78,10 @@ spec:
             httpGet:
               path: /readyz
               port: http
+          {{- if .Values.resources }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
         {{ toYaml .Values.nodeSelector | nindent 8 }}
