--- a/charts/github-exporter/templates/service.yaml
+++ b/charts/github-exporter/templates/service.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -8,8 +7,10 @@ metadata:
 {{- if .Values.service.labels }}
     {{- toYaml .Values.service.labels | nindent 4 }}
 {{- end }}
+{{- if  .Values.service.annotations }}
   annotations:
     {{- toYaml .Values.service.annotations | nindent 4 }}
+{{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
