--- a/charts/hcloud-exporter/templates/secret.yaml
+++ b/charts/hcloud-exporter/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if and (not .Values.config.tokenSecret) .Values.config.token -}}
+{{- if not .Values.config.existingSecret -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,5 +7,5 @@ metadata:
     {{- include "hcloud-exporter.labels" . | nindent 4 }}
 type: Opaque
 data:
-  HCLOUD_EXPORTER_TOKEN: {{ .Values.config.token | b64enc }}
+   {{ .Values.config.tokenKey }}: {{ required "Requires token secret!" .Values.config.token | b64enc | quote }}
 {{- end -}}
