--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -48,4 +48,20 @@ labels:
     color: cccccc
     description: This is out of scope and outdated
 
+branches:
+  - name: master
+    protection:
+      required_pull_request_reviews: null
+      required_status_checks:
+        strict: true
+        contexts:
+          - testing
+      enforce_admins: false
+      restrictions:
+        apps:
+          - renovate
+        users:
+          - bothippie
+        teams: []
+
 ...
