--- a/charts/hcloud-exporter/values.yaml
+++ b/charts/hcloud-exporter/values.yaml
@@ -137,6 +137,7 @@ envFromConfigMap: ""
 
 # -- Extra environment variables from mapping
 extraEnvVariables: {}
+  # HCLOUD_EXPORTER_COLLECTOR_SERVERS: true
 
 # -- Extra environment variables from secrets
 extraEnvSecrets: {}
