--- a/charts/hetzner-exporter/Chart.yaml
+++ b/charts/hetzner-exporter/Chart.yaml
@@ -1,25 +1,25 @@
 ---
 apiVersion: v2
 
-name: dockerhub-exporter
-description: A Helm chart for dockerhub-exporter
+name: hetzner-exporter
+description: A Helm chart for hetzner-exporter
 type: application
 
-# renovate: datasource=docker depName=quay.io/promhippie/dockerhub-exporter
+# renovate: datasource=docker depName=quay.io/promhippie/hetzner-exporter
 appVersion: 1.0.0
-version: 1.0.1
+version: 1.0.0
 
-home: https://promhippie.github.io/dockerhub_exporter/
-icon: https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/docker.svg
+home: https://promhippie.github.io/hetzner_exporter/
+icon: https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/hetzner.svg
 
 keywords:
   - docker
-  - dockerhub
+  - hetzner
   - prometheus
   - exporter
 
 sources:
-  - https://github.com/promhippie/dockerhub_exporter
+  - https://github.com/promhippie/hetzner_exporter
 
 maintainers:
   - name: tboerger
