--- a/charts/hetzner-exporter/Chart.yaml
+++ b/charts/hetzner-exporter/Chart.yaml
@@ -7,7 +7,7 @@ type: application
 
 # renovate: datasource=docker depName=quay.io/promhippie/hetzner-exporter
 appVersion: 1.1.0
-version: 1.1.0
+version: 1.1.1
 
 home: https://promhippie.github.io/hetzner_exporter/
 icon: https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/hetzner.svg
@@ -24,5 +24,12 @@ sources:
 maintainers:
   - name: tboerger
     email: thomas@webhippie.de
+    url: https://github.com/tboerger
+
+annotations:
+  artifacthub.io/license: Apache-2.0
+  artifacthub.io/signKey: |
+    fingerprint: B8BB213D9E131E46D2EBE22E44E93172C6FDE7E6
+    url: https://dl.webhippie.de/promhippie.key
 
 ...
