--- a/charts/jenkins-exporter/Chart.yaml
+++ b/charts/jenkins-exporter/Chart.yaml
@@ -7,7 +7,7 @@ type: application
 
 # renovate: datasource=docker depName=quay.io/promhippie/jenkins-exporter
 appVersion: 1.0.0
-version: 1.0.1
+version: 1.0.2
 
 home: https://promhippie.github.io/jenkins_exporter/
 icon: https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/jenkins.svg
@@ -23,5 +23,12 @@ sources:
 maintainers:
   - name: tboerger
     email: thomas@webhippie.de
+    url: https://github.com/tboerger
+
+annotations:
+  artifacthub.io/license: Apache-2.0
+  artifacthub.io/signKey: |
+    fingerprint: B8BB213D9E131E46D2EBE22E44E93172C6FDE7E6
+    url: https://dl.webhippie.de/promhippie.key
 
 ...
