chore: set keyring path as env variable

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,5 +33,6 @@ jobs:
         uses: helm/chart-releaser-action@v1.4.0
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CR_KEYRING: /home/runner/.gnupg/pubring.kbx
 
 ...
