--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,10 +19,10 @@ jobs:
 
       - name: Import gnupg
         id: gnupg
-        run: |
-          echo "${{ secrets.GNUPG_KEY }}" | gpg --batch --import
-          gpg --export B8BB213D9E131E46D2EBE22E44E93172C6FDE7E6 >| ~/.gnupg/pubring.gpg
-          gpg --export-secret-keys B8BB213D9E131E46D2EBE22E44E93172C6FDE7E6 >| ~/.gnupg/secring.gpg
+        uses: crazy-max/ghaction-import-gpg@v5
+        with:
+          gpg_private_key: ${{ secrets.GNUPG_KEY }}
+          passphrase: ${{ secrets.GNUPG_PASSWORD }}
 
       - name: Configure git
         id: git
