--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,26 +18,12 @@ jobs:
           fetch-depth: 0
 
       - name: Import gnupg
-        id: gnupg
-        uses: crazy-max/ghaction-import-gpg@v5
+        uses: cresh-io/action-gpg@v1
         with:
-          gpg_private_key: ${{ secrets.GNUPG_KEY }}
-          passphrase: ${{ secrets.GNUPG_PASSWORD }}
-
-      - name: Export gnupg
-        id: export
-        run: |
-          gpg --always-trust --yes -s $(mktemp)
-          gpg --list-secret-keys
-
-          gpg --export >| ~/.gnupg/pubring.gpg
-          gpg --export-secret-keys >| ~/.gnupg/secring.gpg
-
-      - name: Configure git
-        id: git
-        run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          gpg-sign-key: ${{ secrets.GNUPG_KEY }}
+          gpg-passphrase: ${{ secrets.GNUPG_PASSWORD }}
+          git-email: ${{ github.actor }}@users.noreply.github.com
+          git-username: ${{ github.actor }}
 
       - name: Run releaser
         id: releaser
