--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,10 +20,21 @@ jobs:
       - name: Import gnupg
         uses: cresh-io/action-gpg@v1
         with:
-          gpg-sign-key: ${{ secrets.GNUPG_KEY }}
-          gpg-passphrase: ${{ secrets.GNUPG_PASSWORD }}
-          git-email: ${{ github.actor }}@users.noreply.github.com
-          git-username: ${{ github.actor }}
+            gpg-sign-key: ${{ secrets.GNUPG_KEY }}
+            gpg-passphrase: ${{ secrets.GNUPG_PASSWORD }}
+            git-email: ${{ github.actor }}@users.noreply.github.com
+            git-username: ${{ github.actor }}
+
+      - name: Write secring
+        id: secring
+        run: |
+          base64 --decode <<< "${{ secrets.GNUPG_SECRING }}" >| ~/.gnupg/pubring.gpg
+
+      - name: Configure git
+        id: git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Run releaser
         id: releaser
