--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Write secring
         id: secring
         run: |
-          base64 --decode <<< "${{ secrets.GNUPG_SECRING }}" >| ~/.gnupg/pubring.gpg
+          base64 --decode <<< "${{ secrets.GNUPG_SECRING }}" >| ~/secring.gpg
 
       - name: Configure git
         id: git
@@ -33,5 +33,6 @@ jobs:
         uses: helm/chart-releaser-action@v1.4.0
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CR_KEYRING: ~/secring.gpg
 
 ...
