--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,8 @@
 {
     "extends": [
         "config:base",
-        ":dependencyDashboard",
-        ":automergeMinor",
-        ":automergeDigest"
+        ":semanticCommits",
+        ":semanticCommitType(deps)"
     ],
     "regexManagers": [
         {
@@ -17,33 +16,33 @@
     ],
     "packageRules": [
         {
-            "description": "Semantic commits for major updates",
-            "groupName": "major updates",
+            "description": "Semantic commits for major versions",
+            "groupName": "major versions",
             "matchUpdateTypes": [
                 "major"
             ],
-            "semanticCommitType": "major",
-            "semanticCommitScope": "deps",
+            "semanticCommitType": "deps",
+            "semanticCommitScope": "major",
             "automerge": false
         },
         {
-            "description": "Semantic commits for minor updates",
-            "groupName": "minor updates",
+            "description": "Semantic commits for minor versions",
+            "groupName": "minor versions",
             "matchUpdateTypes": [
                 "minor"
             ],
-            "semanticCommitType": "minor",
-            "semanticCommitScope": "deps",
+            "semanticCommitType": "deps",
+            "semanticCommitScope": "minor",
             "automerge": false
         },
         {
-            "description": "Semantic commits for patch updates",
-            "groupName": "patch updates",
+            "description": "Semantic commits for patch versions",
+            "groupName": "patch versions",
             "matchUpdateTypes": [
                 "patch"
             ],
-            "semanticCommitType": "patch",
-            "semanticCommitScope": "deps",
+            "semanticCommitType": "deps",
+            "semanticCommitScope": "patch",
             "automerge": false
         }
     ],
