--- a/charts/github-exporter/templates/secret.yaml
+++ b/charts/github-exporter/templates/secret.yaml
@@ -7,5 +7,12 @@ metadata:
     {{- include "github-exporter.labels" . | nindent 4 }}
 type: Opaque
 data:
-   {{ .Values.config.tokenKey }}: {{ required "Requires token secret!" .Values.config.token | b64enc | quote }}
+{{- if eq .Values.config.authType "token" }}
+  {{ .Values.config.tokenKey }}: {{ required "Requires token secret!" .Values.config.token | b64enc | quote }}
+{{- end }}
+{{- if eq .Values.config.authType "app" }}
+  {{ .Values.config.appIdKey }}: {{ required "Requires appId secret!" .Values.config.appId | b64enc | quote }}
+  {{ .Values.config.installationIdKey }}: {{ required "Requires installationId secret!" .Values.config.installationId | b64enc | quote }}
+  {{ .Values.config.privateKeyKey }}: {{ required "Requires privateKey secret!" .Values.config.privateKey | b64enc | quote }}
+{{- end }}
 {{- end -}}
