fix: always typecast integer before b64enc

--- a/charts/github-exporter/templates/secret.yaml
+++ b/charts/github-exporter/templates/secret.yaml
@@ -11,8 +11,8 @@ data:
   {{ .Values.config.tokenKey }}: {{ required "Requires token secret!" .Values.config.token | b64enc | quote }}
 {{- end }}
 {{- if eq .Values.config.authType "app" }}
-  {{ .Values.config.appIdKey }}: {{ required "Requires appId secret!" .Values.config.appId | b64enc | quote }}
-  {{ .Values.config.installationIdKey }}: {{ required "Requires installationId secret!" .Values.config.installationId | b64enc | quote }}
+  {{ .Values.config.appIdKey }}: {{ required "Requires appId secret!" .Values.config.appId | toString | b64enc | quote }}
+  {{ .Values.config.installationIdKey }}: {{ required "Requires installationId secret!" .Values.config.installationId | toString | b64enc | quote }}
   {{ .Values.config.privateKeyKey }}: {{ required "Requires privateKey secret!" .Values.config.privateKey | b64enc | quote }}
 {{- end }}
 {{- end -}}
