--- a/stable/dockerhub-exporter/templates/deployment.yaml
+++ b/stable/dockerhub-exporter/templates/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     {{- include "dockerhub-exporter.labels" . | nindent 4 }}
   annotations:
+{{- if .Values.files }}
+    checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+{{- end }}
 {{- if not .Values.config.existingSecret }}
     checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
 {{- end }}
@@ -30,14 +33,24 @@ spec:
       imagePullSecrets:
       {{- range .Values.image.pullSecrets }}
         - name: {{ . }}
-      {{- end}}
+      {{- end }}
+      {{- end }}
+      {{- with .Values.securityContext }}
+      securityContext:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.extraInitContainers }}
+      initContainers:
+        {{ toYaml .Values.extraInitContainers | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- with .Values.podSecurityContext }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           env:
             - name: DOCKERHUB_EXPORTER_USERNAME
               valueFrom:
@@ -49,6 +62,22 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.config.existingSecret | default (include "dockerhub-exporter.fullname" .) }}
                   key: {{ .Values.config.passwordKey }}
+            {{- if .Values.exporter.org }}
+            - name: DOCKERHUB_EXPORTER_ORG
+              value: "{{ .Values.exporter.org }}"
+            {{- end }}
+            {{- if .Values.exporter.user }}
+            - name: DOCKERHUB_EXPORTER_USER
+              value: "{{ .Values.exporter.user }}"
+            {{- end }}
+            {{- if .Values.exporter.repo }}
+            - name: DOCKERHUB_EXPORTER_REPO
+              value: "{{ .Values.exporter.repo }}"
+            {{- end }}
+            {{- if ne .Values.collector.repos nil }}
+            - name: DOCKERHUB_EXPORTER_COLLECTOR_REPOS
+              value: "{{ .Values.collector.repos }}"
+            {{- end }}
             {{- range $key, $value := .Values.extraEnvSecrets }}
             - name: {{ $key }}
               valueFrom:
@@ -87,6 +116,16 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- end }}
+          {{- if or .Values.extraVolumeMounts .Values.files }}
+          volumeMounts:
+            {{- if .Values.files }}
+            - name: files
+              mountPath: /etc/dockerhub-exporter-files
+            {{- end }}
+            {{- if .Values.extraVolumeMounts }}
+            {{ toYaml .Values.extraVolumeMounts | nindent 12 }}
+            {{- end }}
+          {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
         {{ toYaml .Values.nodeSelector | nindent 8 }}
@@ -98,4 +137,15 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{ toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if or .Values.extraVolumes .Values.files }}
+      volumes:
+        {{- if .Values.files }}
+        - name: files
+          configMap:
+            name: {{ include "dockerhub-exporter.fullname" . }}-files
+        {{- end }}
+        {{- if .Values.extraVolumes }}
+        {{ toYaml .Values.extraVolumes | nindent 8 }}
+        {{- end }}
       {{- end }}
